--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyChatApp">
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".MyChatActivity"></activity>
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".ForgetActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".MainActivity" />
